Form foundation and structural development

--- a/source/src/assets/scss/_bootstrap-style-override.scss
+++ b/source/src/assets/scss/_bootstrap-style-override.scss
@@ -1,3 +1,16 @@
 .alert-infos {
     background-color: red;
 }
+
+form {
+    label {
+        font-weight: bold;
+    }
+
+    input[type="text"], input[type="email"] {
+        border: 3px solid black;
+        border-radius: 0;
+        padding: 25px 20px;
+    }
+}
+
