--- a/source/src/assets/scss/_bootstrap-style-override.scss
+++ b/source/src/assets/scss/_bootstrap-style-override.scss
@@ -7,7 +7,7 @@ form {
         font-weight: bold;
     }
 
-    input[type="text"], input[type="email"] {
+    input[type="text"], input[type="email"], input[type="number"] {
         border: 3px solid black;
         border-radius: 0;
         padding: 25px 20px;
