--- a/source/src/assets/scss/_bootstrap-style-override.scss
+++ b/source/src/assets/scss/_bootstrap-style-override.scss
@@ -1,3 +1,5 @@
+@import 'colors.scss';
+
 .alert-infos {
     background-color: red;
 }
@@ -8,14 +10,49 @@ form {
     }
 
     input[type="text"], input[type="email"], input[type="number"] {
-        border: 3px solid black;
+        border: 3px solid $color-black;
         border-radius: 0;
         padding: 25px 20px;
     }
 
     textarea.form-control {
-        border: 3px solid black;
+        border: 3px solid $color-black;
         border-radius: 0;
         padding: 15px 20px;
+    }
+}
+
+.btn {
+    border-radius: 0;
+    padding: 0.7em;
+    font-weight: bold;
+    border: 4px solid black;
+
+    min-width: 10em;
+
+    &.btn-primary {
+
+        $c: $color-orange;
+
+        background-color: $c;
+        border-color: $c;
+    }
+
+    &.btn-secondary {
+        color: $color-black;
+        background-color: $color-white;
+        border-color: $color-black;
+    }
+
+    &.btn-passive {
+        background-color: $color-lightgrey;
+        border-color: $color-lightgrey;
+        color: lighten($color-black, 50%);
+        font-weight: normal;
+    }
+
+    &.btn-danger {
+        background-color: $color-darkred;
+        border-color: $color-darkred;
     }
 }
