--- a/source/src/assets/scss/_bootstrap-style-override.scss
+++ b/source/src/assets/scss/_bootstrap-style-override.scss
@@ -25,7 +25,7 @@ form {
 .btn {
     border-radius: 0;
     padding: 0.7em;
-    font-weight: bold;
+    font-weight: 500;
     border: 4px solid black;
 
     min-width: 10em;
