--- a/source/src/assets/scss/colors.scss
+++ b/source/src/assets/scss/colors.scss
@@ -1,9 +1,10 @@
 $color-black: #000000;
 $color-white: #ffffff;
 
-$color-orange: #bb6722;
 $color-darkblue: #242831;
+$color-darkred: #6F2211;
+$color-lightgrey: #6f7b96;
 $color-rose: #bd9b93;
-$color-darkred: #672010;
+
+$color-orange: #bb6722;
 $color-beige: #cfc6bc;
-$color-lightgrey: #dedede;
