--- a/source/src/assets/scss/_bootstrap-style-override.scss
+++ b/source/src/assets/scss/_bootstrap-style-override.scss
@@ -1,108 +1,8 @@
+
 @import 'colors.scss';
 @import 'fonts.scss';
-
-
-div.n-style, 
-section.n-style, 
-header.n-style, 
-article.n-style, 
-aside.n-style, 
-details.n-style, 
-figcaption.n-style, 
-figure.n-style,
-footer.n-style, 
-main.n-style, 
-mark.n-style, 
-nav.n-style, 
-summary.n-style, 
-time.n-style {
-
-    font-family: 'Nationale';
-
-    h2 {
-        font-size: 3em;
-        font-weight: bold;
-    }
-
-    h3 {
-        margin-top: 1em;
-        margin-bottom: 0.5em;
-        font-weight: bold;
-    }
-
-    h4 {
-        margin-top: 1.5em;
-        font-size: 1.3em;
-    }
-}
-
-label.n-style {
-    font-weight: bold;
-}
-
-input.n-style {
-    border: 3px solid $color-black;
-    border-radius: 0;
-    padding: 25px 20px;
-}
-
-textarea.form-control.n-style {
-    border: 3px solid $color-black;
-    border-radius: 0;
-    padding: 15px 20px;
-}
-
-.n-style.btn {
-    border-radius: 0;
-    padding: 0.7em;
-    font-weight: 500;
-    border: 4px solid black;
-
-    min-width: 10em;
-
-    &:disabled {
-        opacity: 0.5;
-    }
-
-    &.btn-primary {
-        background-color: $color-darkblue;
-        border-color: $color-darkblue;
-
-        &:disabled {
-            opacity: 0.3;
-            color: #999;
-        }
-    }
-
-    &.btn-secondary {
-        color: $color-black;
-        background-color: transparent;
-        border-color: $color-black;
-    }
-}
-
-table.n-style {
-    thead {
-        th {
-            border-bottom: 2px solid $color-darkblue;
-        }
-    }
-
-    code {
-        color: $color-darkred;
-    }
-
-    &.table-striped {
-        tbody {
-            tr:nth-of-type(odd) {
-                background-color: lighten($color-darkblue, 80%);
-                // background-color: lighten($color-lightgrey, 30%);
-                // color: $color-white;
-
-                code {
-                    color: $color-darkred;
-                }
-            }
-        }
-    }
-}
+@import 'elements/utility.scss';
+@import 'elements/structure.scss';
+@import 'elements/forms.scss';
+@import 'elements/tables.scss';
+@import 'elements/buttons.scss';
