--- a/source/src/assets/scss/_bootstrap-style-override.scss
+++ b/source/src/assets/scss/_bootstrap-style-override.scss
@@ -6,3 +6,4 @@
 @import 'elements/forms.scss';
 @import 'elements/tables.scss';
 @import 'elements/buttons.scss';
+@import 'elements/pagination.scss';
