--- a/source/src/assets/scss/_bootstrap-style-override.scss
+++ b/source/src/assets/scss/_bootstrap-style-override.scss
@@ -7,3 +7,4 @@
 @import 'elements/tables.scss';
 @import 'elements/buttons.scss';
 @import 'elements/pagination.scss';
+@import 'elements/breadcrumb.scss';
