Style card component

--- a/source/src/assets/scss/_bootstrap-style-override.scss
+++ b/source/src/assets/scss/_bootstrap-style-override.scss
@@ -8,3 +8,4 @@
 @import 'elements/buttons.scss';
 @import 'elements/pagination.scss';
 @import 'elements/breadcrumb.scss';
+@import 'elements/card.scss';
