--- a/source/src/assets/scss/elements/pagination.scss
+++ b/source/src/assets/scss/elements/pagination.scss
@@ -13,5 +13,16 @@ $color-on-primary: $color-white;
             background-color: $primary-color;
             color: $color-on-primary;
         }
+
+        &:first-child, &:nth-child(2), &:nth-last-child(2), &:last-child {
+            font-size: 1.5em;
+            font-weight: bold;
+
+            .page-link {
+                padding-top: 0;
+            }
+        }
     }
+
+    
 }
