Update breadcrumb style

--- a/source/src/assets/scss/elements/breadcrumb.scss
+++ b/source/src/assets/scss/elements/breadcrumb.scss
@@ -1,22 +1,24 @@
 $color: $color-darkblue;
 $bg-color: lighten($color-lightgrey, 20%);
-$link-color: $color-white;
+$link-color: $color-lightgrey;
 
 
 .n-style .breadcrumb {
-    background-color: $bg-color;
-    padding: 0.5rem 0.75rem;
-    font-weight: 700;
+    background-color: transparent;
+    padding: 0;
+    font-weight: 400;
 
     .breadcrumb-item, .breadcrumb-item::before {
         color: $color;
+        font-weight: bold;
     }
 
     .breadcrumb-item a {
         color: $link-color;
+        font-weight: normal;
     }
 
     .breadcrumb-item + .breadcrumb-item::before {
-        content: '|'
+        content: '›'
     }
 }
