Highlight code examples

--- a/source/src/assets/scss/app.scss
+++ b/source/src/assets/scss/app.scss
@@ -10,3 +10,4 @@
 @import 'elements/pagination.scss';
 @import 'elements/breadcrumb.scss';
 @import 'elements/card.scss';
+@import 'elements/highlight-js.scss';
