Text page example and styling

--- a/source/src/assets/scss/app.scss
+++ b/source/src/assets/scss/app.scss
@@ -4,6 +4,7 @@
 @import 'base/fonts.scss';
 @import 'base/utility.scss';
 @import 'base/structure.scss';
+@import 'base/text.scss';
 @import 'elements/forms.scss';
 @import 'elements/tables.scss';
 @import 'elements/buttons.scss';
