Set all borders to 2px instead of 3px

--- a/source/src/assets/scss/app.scss
+++ b/source/src/assets/scss/app.scss
@@ -1,5 +1,6 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
+@import 'base/vars.scss';
 @import 'base/colors.scss';
 @import 'base/fonts.scss';
 @import 'base/utility.scss';
