Style links and introduce title
Fixes #42
Fixes #24

--- a/source/src/assets/scss/base/text.scss
+++ b/source/src/assets/scss/base/text.scss
@@ -58,3 +58,13 @@ img.full + p {
         }
     }
 }
+
+a {
+    $a-color: lighten($color-darkred, 25%);
+
+    color: $a-color;
+
+    &:hover {
+        color: $a-color;
+    }
+}
