--- a/source/src/assets/scss/app.scss
+++ b/source/src/assets/scss/app.scss
@@ -13,3 +13,4 @@
 @import 'elements/breadcrumb.scss';
 @import 'elements/card.scss';
 @import 'elements/highlight-js.scss';
+@import 'elements/popover.scss';
