Steps page rough draft

--- a/source/src/assets/scss/app.scss
+++ b/source/src/assets/scss/app.scss
@@ -6,6 +6,7 @@
 @import 'base/utility.scss';
 @import 'base/structure.scss';
 @import 'base/text.scss';
+@import 'base/animation.scss';
 @import 'elements/forms.scss';
 @import 'elements/tables.scss';
 @import 'elements/buttons.scss';
