Update invalid colors on certain backgrounds
Fixes #88

--- a/src/assets/scss/elements/forms.scss
+++ b/src/assets/scss/elements/forms.scss
@@ -53,3 +53,18 @@ section.white {
 .n-style .form-section {
     margin-bottom: 2em;
 }
+
+.n-style .form-control.is-invalid {
+    background-image: none;
+}
+
+section.lightgrey,
+section.rose {
+    .invalid-feedback {
+        color: $color-darkred;
+    }
+
+    .form-control.is-invalid {
+        border-color: $color-darkred;
+    }
+}
