Pure CSS fix for IE inputs

--- a/src/assets/scss/elements/forms.scss
+++ b/src/assets/scss/elements/forms.scss
@@ -21,7 +21,7 @@
 }
 
 .n-style input, input.n-style {
-    padding: 20px 15px;
+    height: 44px;
 }
 
 .n-style textarea.form-control, textarea.form-control.n-style {
